src/y.output
Grammar

    0 $accept: inputunit $end

    1 inputunit: simple_list
    2          | simple_list ';'
    3          | simple_list ';' '\n'
    4          | simple_list '\n'
    5          | '\n'
    6          | yacc_EOF

    7 redirection: '>' WORD
    8            | '<' WORD

    9 simple_command_element: OPTION
   10                       | WORD
   11                       | redirection

   12 fcmd_element: FCMD

   13 fscmd_element: FSCMD

   14 scmd_element: SCMD

   15 simple_file_command: fcmd_element
   16                    | simple_file_command simple_command_element

   17 simple_file_string_command: fscmd_element
   18                           | simple_file_string_command simple_command_element

   19 simple_string_command: scmd_element
   20                      | simple_string_command simple_command_element

   21 default_command: simple_command_element
   22                | default_command simple_command_element

   23 simple_command: simple_file_command
   24               | simple_file_string_command
   25               | simple_string_command
   26               | default_command

   27 command: simple_command

   28 newline_list: /* empty */
   29             | newline_list '\n'

   30 pipeline: command '|' newline_list command
   31         | pipeline '|' command

   32 simple_list: command
   33            | pipeline


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3 4 5 29
';' (59) 2 3
'<' (60) 8
'>' (62) 7
'|' (124) 30 31
error (256)
FCMD (258) 12
FSCMD (259) 13
SCMD (260) 14
OPTION (261) 9
WORD (262) 7 8 10
yacc_EOF (263) 6


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
inputunit (15)
    on left: 1 2 3 4 5 6, on right: 0
redirection (16)
    on left: 7 8, on right: 11
simple_command_element (17)
    on left: 9 10 11, on right: 16 18 20 21 22
fcmd_element (18)
    on left: 12, on right: 15
fscmd_element (19)
    on left: 13, on right: 17
scmd_element (20)
    on left: 14, on right: 19
simple_file_command (21)
    on left: 15 16, on right: 16 23
simple_file_string_command (22)
    on left: 17 18, on right: 18 24
simple_string_command (23)
    on left: 19 20, on right: 20 25
default_command (24)
    on left: 21 22, on right: 22 26
simple_command (25)
    on left: 23 24 25 26, on right: 27
command (26)
    on left: 27, on right: 30 31 32
newline_list (27)
    on left: 28 29, on right: 29 30
pipeline (28)
    on left: 30 31, on right: 31 33
simple_list (29)
    on left: 32 33, on right: 1 2 3 4


state 0

    0 $accept: . inputunit $end

    FCMD      shift, and go to state 1
    FSCMD     shift, and go to state 2
    SCMD      shift, and go to state 3
    OPTION    shift, and go to state 4
    WORD      shift, and go to state 5
    yacc_EOF  shift, and go to state 6
    '\n'      shift, and go to state 7
    '>'       shift, and go to state 8
    '<'       shift, and go to state 9

    inputunit                   go to state 10
    redirection                 go to state 11
    simple_command_element      go to state 12
    fcmd_element                go to state 13
    fscmd_element               go to state 14
    scmd_element                go to state 15
    simple_file_command         go to state 16
    simple_file_string_command  go to state 17
    simple_string_command       go to state 18
    default_command             go to state 19
    simple_command              go to state 20
    command                     go to state 21
    pipeline                    go to state 22
    simple_list                 go to state 23


state 1

   12 fcmd_element: FCMD .

    $default  reduce using rule 12 (fcmd_element)


state 2

   13 fscmd_element: FSCMD .

    $default  reduce using rule 13 (fscmd_element)


state 3

   14 scmd_element: SCMD .

    $default  reduce using rule 14 (scmd_element)


state 4

    9 simple_command_element: OPTION .

    $default  reduce using rule 9 (simple_command_element)


state 5

   10 simple_command_element: WORD .

    $default  reduce using rule 10 (simple_command_element)


state 6

    6 inputunit: yacc_EOF .

    $default  reduce using rule 6 (inputunit)


state 7

    5 inputunit: '\n' .

    $default  reduce using rule 5 (inputunit)


state 8

    7 redirection: '>' . WORD

    WORD  shift, and go to state 24


state 9

    8 redirection: '<' . WORD

    WORD  shift, and go to state 25


state 10

    0 $accept: inputunit . $end

    $end  shift, and go to state 26


state 11

   11 simple_command_element: redirection .

    $default  reduce using rule 11 (simple_command_element)


state 12

   21 default_command: simple_command_element .

    $default  reduce using rule 21 (default_command)


state 13

   15 simple_file_command: fcmd_element .

    $default  reduce using rule 15 (simple_file_command)


state 14

   17 simple_file_string_command: fscmd_element .

    $default  reduce using rule 17 (simple_file_string_command)


state 15

   19 simple_string_command: scmd_element .

    $default  reduce using rule 19 (simple_string_command)


state 16

   16 simple_file_command: simple_file_command . simple_command_element
   23 simple_command: simple_file_command .

    OPTION  shift, and go to state 4
    WORD    shift, and go to state 5
    '>'     shift, and go to state 8
    '<'     shift, and go to state 9

    $default  reduce using rule 23 (simple_command)

    redirection             go to state 11
    simple_command_element  go to state 27


state 17

   18 simple_file_string_command: simple_file_string_command . simple_command_element
   24 simple_command: simple_file_string_command .

    OPTION  shift, and go to state 4
    WORD    shift, and go to state 5
    '>'     shift, and go to state 8
    '<'     shift, and go to state 9

    $default  reduce using rule 24 (simple_command)

    redirection             go to state 11
    simple_command_element  go to state 28


state 18

   20 simple_string_command: simple_string_command . simple_command_element
   25 simple_command: simple_string_command .

    OPTION  shift, and go to state 4
    WORD    shift, and go to state 5
    '>'     shift, and go to state 8
    '<'     shift, and go to state 9

    $default  reduce using rule 25 (simple_command)

    redirection             go to state 11
    simple_command_element  go to state 29


state 19

   22 default_command: default_command . simple_command_element
   26 simple_command: default_command .

    OPTION  shift, and go to state 4
    WORD    shift, and go to state 5
    '>'     shift, and go to state 8
    '<'     shift, and go to state 9

    $default  reduce using rule 26 (simple_command)

    redirection             go to state 11
    simple_command_element  go to state 30


state 20

   27 command: simple_command .

    $default  reduce using rule 27 (command)


state 21

   30 pipeline: command . '|' newline_list command
   32 simple_list: command .

    '|'  shift, and go to state 31

    $default  reduce using rule 32 (simple_list)


state 22

   31 pipeline: pipeline . '|' command
   33 simple_list: pipeline .

    '|'  shift, and go to state 32

    $default  reduce using rule 33 (simple_list)


state 23

    1 inputunit: simple_list .
    2          | simple_list . ';'
    3          | simple_list . ';' '\n'
    4          | simple_list . '\n'

    ';'   shift, and go to state 33
    '\n'  shift, and go to state 34

    $default  reduce using rule 1 (inputunit)


state 24

    7 redirection: '>' WORD .

    $default  reduce using rule 7 (redirection)


state 25

    8 redirection: '<' WORD .

    $default  reduce using rule 8 (redirection)


state 26

    0 $accept: inputunit $end .

    $default  accept


state 27

   16 simple_file_command: simple_file_command simple_command_element .

    $default  reduce using rule 16 (simple_file_command)


state 28

   18 simple_file_string_command: simple_file_string_command simple_command_element .

    $default  reduce using rule 18 (simple_file_string_command)


state 29

   20 simple_string_command: simple_string_command simple_command_element .

    $default  reduce using rule 20 (simple_string_command)


state 30

   22 default_command: default_command simple_command_element .

    $default  reduce using rule 22 (default_command)


state 31

   30 pipeline: command '|' . newline_list command

    $default  reduce using rule 28 (newline_list)

    newline_list  go to state 35


state 32

   31 pipeline: pipeline '|' . command

    FCMD    shift, and go to state 1
    FSCMD   shift, and go to state 2
    SCMD    shift, and go to state 3
    OPTION  shift, and go to state 4
    WORD    shift, and go to state 5
    '>'     shift, and go to state 8
    '<'     shift, and go to state 9

    redirection                 go to state 11
    simple_command_element      go to state 12
    fcmd_element                go to state 13
    fscmd_element               go to state 14
    scmd_element                go to state 15
    simple_file_command         go to state 16
    simple_file_string_command  go to state 17
    simple_string_command       go to state 18
    default_command             go to state 19
    simple_command              go to state 20
    command                     go to state 36


state 33

    2 inputunit: simple_list ';' .
    3          | simple_list ';' . '\n'

    '\n'  shift, and go to state 37

    $default  reduce using rule 2 (inputunit)


state 34

    4 inputunit: simple_list '\n' .

    $default  reduce using rule 4 (inputunit)


state 35

   29 newline_list: newline_list . '\n'
   30 pipeline: command '|' newline_list . command

    FCMD    shift, and go to state 1
    FSCMD   shift, and go to state 2
    SCMD    shift, and go to state 3
    OPTION  shift, and go to state 4
    WORD    shift, and go to state 5
    '\n'    shift, and go to state 38
    '>'     shift, and go to state 8
    '<'     shift, and go to state 9

    redirection                 go to state 11
    simple_command_element      go to state 12
    fcmd_element                go to state 13
    fscmd_element               go to state 14
    scmd_element                go to state 15
    simple_file_command         go to state 16
    simple_file_string_command  go to state 17
    simple_string_command       go to state 18
    default_command             go to state 19
    simple_command              go to state 20
    command                     go to state 39


state 36

   31 pipeline: pipeline '|' command .

    $default  reduce using rule 31 (pipeline)


state 37

    3 inputunit: simple_list ';' '\n' .

    $default  reduce using rule 3 (inputunit)


state 38

   29 newline_list: newline_list '\n' .

    $default  reduce using rule 29 (newline_list)


state 39

   30 pipeline: command '|' newline_list command .

    $default  reduce using rule 30 (pipeline)
